# bird

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CONTRIBUTING.md  Doc  INSTALL  Makefile  Makefile.in  NEWS  README  README.bgpsec  SECURITY.md  aclocal.m4  bird-complete.bash  bird-gdb.py  bird.conf  configure.ac  configure.in  configure~  maria-mrtload-notes.md  reload_test.conf  stable-branch.toml
.gitlab/issue_templates/: Minor Release.md  Patch Release.md
birdtest/: birdtest.c  birdtest.h
cbirdbot/: cbirdbot.c  client.h  commands.c  commands.h
client/: Makefile  birdc.c  birdcl.c  client.c  client.h  commands.c  complete.c  log.c  print_cbor.c  print_cbor.h  reply_codes.h  util.c
conf/: Makefile  cf-lex.l  conf.c  conf.h  confbase.Y  flowspec.Y  gen_commands.m4  gen_context.m4  gen_keywords.m4  gen_parser.m4  gen_symclass.sh  gen_symclass_to_bison.sh  parser.h  symbols.c
distro/: README.md
distro/config/: apkg.toml
distro/tests/: control  test-bird.sh
doc/: LinuxDocTools.pm  Makefile  bird.conf.example  bird.conf.example2  bird.sgml  birdbot.conf.example  kernel-doc  migration-bird3.md  prog-head.sgml  prog-intro.sgml  reply_codes  roadmap.md  snmp.conf.example  snmpd.conf.example
doc/threads/: 00_the_name_of_the_game.md  01_the_route_and_its_attributes.md  02_asynchronous_export.md  03_coroutines.md  03b_performance.md  04_memory_management.md  Makefile  stats-draw.gnuplot  stats-filter-2d.pl  stats-filter.pl  stats-longfilters.csv  stats.csv
filter/: Makefile  config.Y  data.c  data.h  decl.m4  deref.c  dump.m4  f-inst.c  f-inst.h  f-util.c  f-util.h  filter.c  filter.h  filter_test.c  gen_methods.m4  interpret.h  interpret.m4  line-size.m4  methods.Y  new.m4  postfixify.m4  same.m4  struct.m4  test-reconf-begin.conf  test-reconf-end.conf  test.conf  test.conf.inc  test.conf.overlay  test.conf2  test6.conf  test_bgp_filtering.conf  tree.c  tree.h  tree_test.c  trie-data-edge  trie.c  trie.h  trie_test.c  types.yaml
flock/: Makefile  container.c  ctl.c  flock-cli  flock.c  flock.h  hypervisor.c
flock/bgp-secondary/: bird_dest.conf  bird_src.conf  dump-0001-startup.yaml  dump-0002-enable-p170.yaml  dump-0003-enable-p180.yaml  dump-0004-enable-p190.yaml  dump-0007-disable-p180.yaml  dump-0010-enable-p200.yaml  dump-0011-enable-p190.yaml  dump-0012-enable-p180.yaml  dump-0013-enable-p170.yaml  dump-0014-disable-p200.yaml  dump-0015-disable-p190.yaml  dump-0016-disable-p180.yaml  dump-0018-add-all.yaml  dump-0020-disable-p170.yaml  dump-0022-disable-p190.yaml  dump-0023-disable-p200.yaml  dump-0025-enable-p190.yaml  dump-0027-enable-p170.yaml  dump-0032-enable-p170.yaml  dump-0033-enable-p180.yaml  dump-0034-enable-p190.yaml  dump-0037-disable-p200.yaml  dump-0038-disable-p190.yaml  dump-0039-disable-p180.yaml  dump-0041-enable-p200.yaml  dump-0042-enable-p190.yaml  dump-0043-enable-p180.yaml  test.py
flock/ospf-base/: dump-0001-startup.yaml  dump-0002-fib-startup.yaml  dump-0003-ospf-neighbors.yaml  template.conf  test.py
gitlab/: Dockerfile.j2  Makefile  README.md  data.yml.j2  docker.mk.j2  pipeline.py  template.yml.j2
lib/: Doc  Makefile  Modules  a-path.c  a-path_test.c  a-set.c  a-set_test.c  addrs.c  addrs.h  alloca.h  atomic.h  attribute_cleanup_test.c  attrs.h  birdlib.h  bitmap.c  bitmap.h  bitmap_test.c  bitops.c  bitops.h  bitops_test.c  blake2-impl.h  blake2-kat.h  blake2.h  blake2b.c  blake2s.c  buffer.h  buffer_test.c  cbor-parser.c  cbor.c  cbor.h  cbor_parse_tools.c  cbor_parse_tools.h  cbor_shortcuts.c  cbor_shortcuts.h  cbor_test.c  checksum.c  checksum_test.c  coap.c  coap.h  coro.h  (+112 more)
lua/: Makefile  common.c  filter.c  lua.h
misc/: bird.spec  ips.c
misc/docker/: README.md
misc/gitlab/: README.md  common-header.yml.j2  data.yml.j2  dependent.py  distro-build-list.yml.j2  distro-build-template.yml.j2  distro-build-update.py  docker-template.yml.j2  netlab-header.yml.j2  (+9 more)
mk/: autoconf.mk  build.mk  common.mk  help.mk  install.mk  misc.mk  pkg.mk  target-deb.mk  target-debug.mk  target-release.mk  test.mk
mq-scraps/: test-encap.cbor  test-encap.py  test-ip.cbor  test-ip.py
mq-sketch/: myagr.py
nest/: Doc  Makefile  a-path.c  a-path_test.c  a-set.c  a-set_test.c  aggregator.c  assert.c  attrs.h  bfd.h  bird.h  cbor.c  cbor.h  cbor_cmds.c  cbor_cmds.h  cbor_parse.c  cbor_parse.h  cbor_shortcuts.c  cbor_shortcuts.h  cbor_uytc_test.c  cbor_uytc_test.h  cli.c  cli.h  cmds.c  cmds.h  config.Y  iface-cli.c  iface.c  iface.h  limit.h  locks.c  locks.h  mpls-internal.h  mpls.Y  mpls.c  mpls.h  mrtdump.c  mrtdump.h  mrtdump_test.c  neighbor.c  (+19 more)
proto/: Doc
python/: conftest.py  gui_view.py  test.py
socktest/: Makefile  README.md  common.c  common.h  rcv.c  snd.c
sysdep/: autoconf.h.in  config.h  sysdep.sgml
test/: Makefile  birdtest.c  birdtest.h  birdtest_support.h  bt-utils.c  bt-utils.h  utils.c  utils.h
tools/: Makefile-top.in  Makefile.in  Rules.in  depsplit.sed  doc-template.html  gendist  gendist2  git-check-commits  git-check-tag-ci  git-check-tag-local  git-is-stable-branch  linuxdoc  linuxdoc.lua  logging.lua  make-archive  make-deb  make-debian  make-dev-archive  make-obs  make-rpm  mergedirs  objectgenerator.py  progdoc  release-commit  release-issue.md.j2  release-tag  release.py  rpm-sync-download.sh  rpm-sync-upload.sh  rpm-update.py  run_tests.sh  test-install  version
xmppbot/: Makefile  README  birdbot.h  cbirdbot.c  commands.c
yang/: JSON_CBOR.env  JSON_CBOR.py  Makefile  bird.yang  bird@2026-02-10.sid  birdc.py  cbor-json-yang  cbor-json-yang.py  cbor-xml-yang  cbor-xml-yang.py  cbor.yang  command.cbor  command.json  command.yang  config.Y  create-venv.sh  get-well-known.py  ietf-inet-types@2024-01-04.yang  json-cbor-yang  json-cbor-yang.py  mini.conf  model-cli.c  model-cli.h  show_memory.cbor  show_memory.json  show_memory.yang  show_memory_meta.c  show_ospf.yang  show_ospf_meta.c  show_protocols.json  show_protocols.yang  show_protocols_all.yang  show_status.json  show_status.yang  show_symbols.cbor  test_ip.cbor  test_ip.json  test_ip.xml  test_ip.yang  xml-cbor-yang  (+4 more)
(+467 files in other folders)
